apps/infra-system/cert-manager/templates/ca/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca
spec:
  selector:
    app.kubernetes.io/name: ca
  ports:
    - name: http
      port: 80
      targetPort: 8080
